--- a/index.html
+++ b/index.html
@@ -8,52 +8,56 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="div-comidas"> 
-
-
+    <div class="divtodas-comidas"> 
+        <span></span>
         <div class="div-comidas">
             <img class="comidas" src="foto1.jpeg" alt="">
-            <h1 class="bolo"> imagem 1</h1>
+            <h1 class="titulocomidas"> bolo de cenoura</h1>
         </div>
 
         <div class="div-comidas">
             <img class="comidas" src="foto2.jpeg" alt="">
-            <h1 class="panqueca"> imagem 2</h1>
+            <h1 class="titulocomidas"> panqueca</h1>
         </div>
 
         <div class="div-comidas">
             <img class="comidas" src="foto3.jpeg" alt="">
-            <h1 class="donuts"> imagem 3</h1>
+            <h1 class="titulocomidas"> donuts</h1>
         </div>
+        <span></span>
 
+        <span></span>
         <div class="div-comidas">
             <img class="comidas" src="foto4.jpeg" alt="">
-            <h1 class="petit gateu"> imagem 4</h1>
+            <h1 class="titulocomidas"> petit gateu</h1>
         </div>
 
         <div class="div-comidas"> 
             <img class="comidas" src="foto5.jpeg" alt="">
-            <h1 class="croissant"> imagem 5</h1>
+            <h1 class="titulocomidas"> croissant</h1>
         </div>
 
         <div class="div-comidas">
             <img class="comidas" src="foto6.jpeg" alt="">
-            <h1 class="cupcake"> imagem 6 </h1>
+            <h1 class="titulocomidas"> cupcake </h1>
         </div>
+        <span></span>
+
+        <span></span>
 
         <div class="div-comidas">
             <img class="comidas" src="foto7.jpeg" alt="">
-            <h1 class="bolo"> imagem 7</h1>
+            <h1 class="titulocomidas"> bolo de frutas</h1>
         </div>
 
         <div class="div-comidas">
             <img class="comidas" src="foto8.jpeg" alt="">
-            <h1 class="torta"> imagem 8</h1>
+            <h1 class="titulocomidas"> torta de morango </h1>
         </div>
 
         <div class="div-comidas">
             <img class="comidas" src="foto9.jpeg" alt="">
-            <h1 class="torta"> imagem 9</h1>
+            <h1 class="titulocomidas"> torta de limao</h1>
         </div>
     </div>
 
